adding lighting bolt to home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="value">
-    <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png"/>
+    <img src="https://img.icons8.com/ios/50/000000/lightning-bolt--v1.png"/>
   </div>
     <div class="advantage">
       <h6>Top</h6><br>
@@ -38,7 +38,7 @@
   <div class="cards">
     <hr>
     <div class="value">
-      <img src="https://img.icons8.com/ios/100/000000/map--v2.png" style="height: 90px;"/>
+      <img src="https://img.icons8.com/ios/100/000000/map--v2.png" style="height: 50px;"/>
     </div>
     <div class="advantage">
       <h6>Choose</h6><br>
@@ -46,7 +46,7 @@
     </div>
     <hr>
     <div class="value">
-      <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png" style="height: 99px;"/>
+      <img src="https://img.icons8.com/pastel-glyph/128/000000/facebook-like--v2.png" style="height: 59px;"/>
     </div>
     <div class="advantage">
       <h6>Take advantage</h6><br>
@@ -54,12 +54,12 @@
     </div>
     <hr>
     <div class="value">
-      <img src="https://img.icons8.com/ios/100/000000/globe--v2.png" style="height: 90px;"/>
+      <img src="https://img.icons8.com/ios/100/000000/globe--v2.png" style="height: 50px;"/>
     </div>
     <div class="advantage">
       <h6>Delivery</h6><br>
       <h4 class="card__title">for yourself or a loved one and save time</h4>
     </div>
-    <a href="#haut" class="button-up">Go up</a>
+    <a href="#haut" class="button-up">Up</a>
   </div>
 </div>
