--- a/app/assets/stylesheets/pages/home-page.scss
+++ b/app/assets/stylesheets/pages/home-page.scss
@@ -54,13 +54,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-	width: 75px;
-	height: 75px;
-	background-color: #04b8f4;
-	background-image: linear-gradient(315deg, #04b8f4 0%, #fa8072 74%);
-	border: none;
-	border-radius: 50%;
-	transition: 200ms;
+    width: 55px;
+    height: 55px;
+    background-color: #04b8f4;
+    background-image: linear-gradient(315deg, #04b8f4 0%, #fa8072 74%);
+    border: none;
+    border-radius: 50%;
+    transition: 200ms;
   }
 
   .sigle {
@@ -125,6 +125,7 @@
     display: flex;
     justify-content: center;
     margin-top: 30px;
+    margin-bottom: 30px;
   }
 
   .scrolldown {
