--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,10 +1,28 @@
 .dashboard-card {
-  height: 110px;
-  width: 100%;
+  height: 130px;
+  width: 90vw;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-top: 0px;
+  // justify-content: space-between;
+  margin-bottom: 10px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.05);
+  position: relative;
+}
+
+.dashboard-card > a {
+
+  width: 85%;
+}
+
+a .dashboard-card-infos {
+  padding: 10px 15px;
+  width: 100%;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  // justify-content: space-between;
+  height: 115px;
 }
 
 a .dashboard-card-infos h2 {
@@ -28,17 +46,6 @@ a .dashboard-card-infos h6 {
   color: #272E35;
 }
 
-a .dashboard-card-infos {
-  padding: 10px 15px;
-  width: 80vw;
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 90px;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.05);
-}
 
 
 .dashboard-card-icons {
@@ -46,6 +53,9 @@ a .dashboard-card-infos {
   flex-direction: column;
   justify-content: center;
   height: 80px;
+  align-items: center;
+  position: absolute;
+  right: 16px;
 
   img {
     height: 17px;
