--- a/app/assets/stylesheets/pages/home-page.scss
+++ b/app/assets/stylesheets/pages/home-page.scss
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
   }
-  
+
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
       Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -27,7 +27,7 @@
   h3 > strong {
     color: salmon;
   }
-  
+
   h4 {
     font-family: "Poppins", sans-serif;
     text-align: center;
@@ -37,7 +37,7 @@
   }
 
   h6{
-    text-align: center;
+    // text-align: center;
     font-family: "Poppins", sans-serif;
     color: salmon;
     margin: 0;
@@ -63,7 +63,7 @@
   .cards {
     padding: 0px 0px 100px 0px;
   }
-  
+
   .card {
     margin: 20px;
     padding: 20px;
@@ -86,7 +86,7 @@
     grid-row: 2/3;
     font-size: 30px;
   }
-  
+
   .card__title {
     grid-row: 3/4;
     font-weight: 400;
@@ -121,7 +121,7 @@
     box-sizing: border-box;
     margin-bottom: 16px;
   }
-  
+
   .scrolldown::before {
     content: "";
     position: absolute;
@@ -136,7 +136,7 @@
     box-sizing: border-box;
     box-shadow: 0px -5px 3px 1px #ffffff66;
   }
-  
+
   @keyframes scrolldown-anim {
     0% {
       opacity: 0;
@@ -190,21 +190,21 @@
     }
   }
   /* CARD BACKGROUNDS */
-  
+
   // .card-1 {
   //   background: radial-gradient(#1fe4f5, #3fbafe);
   // }
-  
+
   // .card-2 {
   //   background: radial-gradient(#60efbc, #58d5c9);
   // }
-  
+
   // .card-3 {
   //   background: radial-gradient(#f588d8, #c0a3e5);
   // }
-  
+
   /* RESPONSIVE */
-  
+
   @media (max-width: 1600px) {
     .cards {
       justify-content: center;
