--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,16 +3,19 @@
     <%= link_to root_path, class: "footer-btn" do %>
       <i class="fas fa-home <%= 'btn-active' if current_page?(root_path) %>"></i>
     <% end %>
+    <p class="letter">home</p>
   </div>
   <div class="glow <%= 'active' if current_page?(pharmacies_path) %>">
     <%= link_to pharmacies_path, class: "footer-btn" do %>
       <i class="far fa-map <%= 'btn-active' if current_page?(pharmacies_path) %>"></i>
     <% end %>
+    <p class="letter">map</p>
   </div>
   <div class="glow <%= 'active' if current_page?(orders_path) %>">
     <%= link_to orders_path, class: "footer-btn" do %>
       <i class="fas fa-tachometer-alt <%= 'btn-active' if current_page?(orders_path) %>"></i>
     <% end %>
+    <p class="letter">board</p>
   </div>
   <div class="glow <%= 'active' if @lastorder && current_page?(order_path(@lastorder)) %>">
     <% if @lastorder %>
@@ -27,6 +30,7 @@
               <% end %>
           </div>
         <% end %>
+        <p class="letter">cart</p>
       <% end %>
       <% else %>
         <%= link_to root_path, class: "footer-btn" do %>
@@ -39,10 +43,12 @@
       <%= link_to destroy_user_session_path, :method => :delete, class: "footer-btn" do %>
         <i class="fas fa-user <%= 'btn-active' if current_page?(user_session_path) %>"></i>
       <% end %>
+      <p class="letter">user</p>
     <% else %>
       <%= link_to user_session_path, class: "footer-btn" do %>
         <i class="fas fa-user <%= 'btn-active' if current_page?(user_session_path) %>"></i>
       <% end %>
+      <p class="letter">user</p>
     <% end %>
   </div>
 </div>
