--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   // justify-content: space-between;
-  margin-bottom: 10px;
+  margin-top: 12px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.05);
   position: relative;
