--- a/app/assets/stylesheets/pages/_drugs.scss
+++ b/app/assets/stylesheets/pages/_drugs.scss
@@ -74,7 +74,7 @@
   border-radius: 32px;
   border: none;
   padding: 10px;
-  background-color: rgb(4,184,244);
+  background-color: #0a617e;
   color: white;
   font-weight: 400;
   font-size: 18px;
@@ -171,4 +171,3 @@
 //   width: 17px;
 
 // }
-
