--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="sigle">
     <div class="home-top" id="haut">
       <h1>Drug<br/><strong>Dealer</strong></h1>
-      <%= image_tag "logo.png", style: 'height:50px;width:50px' %>
+      <%= image_tag "logo.png", style: 'height:100px; width:100px;' %>
     </div>
     <div class="view sub-title">
       <h3>Focus on <strong>what matters</strong> while we do the rest</h2>
