--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,18 +1,18 @@
 h1 {
-  padding: 0 10px;
+  padding: 0 50px 0 0;
 }
 
 .home-top {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 30px;
+  padding: 30px 0;
 }
 
 .banner {
   display: flex;
   position: relative;
-  top: 0;
+  padding: 30px 0;
 }
 
 #banner-search-bar {
