--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -28,6 +28,7 @@
             </div>
           </div>
             <div class="fixed-element hidden">
+            <div class="exit-thing-div"><i class="fas fa-times"></i></div>
               <div class="add-drugs-div">
                 <h2><%= drug.formated_name %></h2>
                 <p><%= "+#{drug.age} years" %></p>
