--- a/app/assets/stylesheets/pages/_pharmacy-index.scss
+++ b/app/assets/stylesheets/pages/_pharmacy-index.scss
@@ -5,11 +5,6 @@
   position: relative;
 }
 
-.swiper-wrapper {
-  margin: 0 20px;
-  width: 70vw;
-}
-
 .swiper {
   z-index: 2;
   width: 90vw;
@@ -17,8 +12,7 @@
   position: absolute;
   bottom: 90px;
   .swiper-slide {
-    background-color: white;
-    padding: 20px;
+    padding: 10px;
     a h2 {
       color: rgb(38,88,83);
       font-weight: bold;
@@ -29,6 +23,17 @@
       font-size: 15px;
     }
   }
+}
+
+.swiper-slide-active {
+  width: 100vw !important;
+}
+
+.pharmacy-card-slider {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
 }
 
 .marker {
