--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -8,10 +8,10 @@
           <%= text_field_tag :query,
             params[:query],
             class: "form-control searchadrug",
-            placeholder: "Enter a drug's name"
+            placeholder: "Search a drug"
           %>
           <%= hidden_field_tag :pharmacy_id, @pharmacy.id.to_s %>
-          <%= submit_tag "☌", class: "drug-search-bard-button" %>
+          <%= submit_tag "", class: "drug-search-bard-button" %>
         <% end %>
       </div>
       <% @drugs.each do |drug| %>
