--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
 
     <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
+    <%# <link rel="stylesheet" href="font-awesome/css/font-awesome.css"> %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
