--- a/app/views/pharmacies/index.html.erb
+++ b/app/views/pharmacies/index.html.erb
@@ -1,5 +1,5 @@
 <div class="pharmacy-view">
-  <div id="map", data-markers="<%= @markers.to_json %>", data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+  <div id="map" style="width: 100vw; height: 100vh;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     <div id="map-search-bar">
       <%= form_tag pharmacies_path, method: :get do %>
         <%= text_field_tag :query,
