--- a/app/views/orders/_user-initialize.html.erb
+++ b/app/views/orders/_user-initialize.html.erb
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="cart-card-icons">
-          <%= link_to ordered_drug_path(ordered_drug), method: :delete do %>
+          <%= link_to ordered_drug_path(ordered_drug), method: :delete, remote: true do %>
             <%= image_tag "trash.png" %>
           <% end %>
         </div>
