--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,6 +18,14 @@
   font-size: 15px;
 }
 
+.button-flash-index {
+  text-decoration: underline;
+  color: black;
+  opacity: 0.8;
+  text-align: center;
+  font-size: 15px;
+}
+
 .pharmacy-show-top {
   margin: 10px 0 20px 0px;
 }
