--- a/app/views/orders/_user-pending.html.erb
+++ b/app/views/orders/_user-pending.html.erb
@@ -2,7 +2,7 @@
   <div class="flash flash-warning alert alert-dismissible fade show" role="alert">
     <div class="flash-content">
       <p><strong>Hi again!</strong> Your order is being handeled by the pharmacist. You will be notified as soon as it's ready for payment ☺️</p>
-      <%= link_to "< Back to your orders", orders_path, class:"button-pharma-index"%>
+      <%= link_to "< Back to your orders", orders_path, class:"button-flash-index"%>
     </div>
     <a data-dismiss="alert" aria-label="Close">
       <i class="fas fa-times"></i>
