--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -1,48 +1,22 @@
 <div class="overlay hidden"></div>
-  <div class="container">
-    <div class="view" data-controller="list">
-      <div class="pharma-header">
-        <h2><%= @pharmacy.name%></h2>
-        <p><%= @pharmacy.address%></p>
-        <%= form_tag drugs_path, method: :get, class: "drug-index-search" do %>
-          <%= text_field_tag :query,
-            params[:query],
-            class: "form-control searchadrug",
-            placeholder: "Search a drug"
-          %>
-          <%= hidden_field_tag :pharmacy_id, @pharmacy.id.to_s %>
-          <%= submit_tag "", class: "drug-search-bard-button" %>
-        <% end %>
-      </div>
-      <% @drugs.each do |drug| %>
-        <div class="card-container">
-          <div class="card-product">
-            <% if drug.pic.attached?%>
-              <%=cl_image_tag drug.pic.key%>
-            <%else%>
-              <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-            <%end%>
-            <div class="card-product-infos">
-              <h2><%= drug.formated_name %></h2>
-              <p><%= "+#{drug.age} years" %></p>
-            </div>
-          </div>
-            <div class="fixed-element hidden">
-              <div class="exit-thing-div"><i class="fas fa-times exit-thing"></i></div>
-              <div class="add-drugs-div">
-                <h2><%= drug.formated_name %></h2>
-                <p><%= "+#{drug.age} years" %></p>
-                <% unless current_user.orders.last.drugs.include?(drug) %>
-                  <%= link_to order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post do %>
-                    <button class="btn-add-drug">Add to Order</button>
-                  <% end %>
-                <% else %>
-                  <p class="btn-non-add-drug">This drug is already in your basket </p>
-                <% end %>
-              </div>
-            </div>
-          </div>
+<div class="container">
+  <div class="view" data-controller="refresh-list">
+    <div class="pharma-header">
+      <h2><%= @pharmacy.name%></h2>
+      <p><%= @pharmacy.address%></p>
+      <%= form_tag drugs_path, method: :get, class: "drug-index-search", data: { refresh_list_target: 'form' } do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control searchadrug",
+          placeholder: "Search a drug",
+          data: {
+            refresh_list_target: 'searchInput',
+            action: "keyup->refresh-list#update"
+          } %>
+        <%= hidden_field_tag :pharmacy_id, @pharmacy.id.to_s %>
+        <%= submit_tag "", class: "drug-search-bard-button" %>
       <% end %>
     </div>
+    <%= render 'drugs/list' %>
   </div>
 </div>
