fixed some html

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
   </div>
     <div class="advantage">
       <h6>Top</h6><br>
-      <h4>application for medication delivery</h4>
+      <h4 class="card__title">application for medication delivery</h4>
     </div>
   <div class="cards">
     <hr>
