--- a/app/views/drugs/_list.html.erb
+++ b/app/views/drugs/_list.html.erb
@@ -13,7 +13,9 @@
         </div>
       </div>
       <div class="fixed-element hidden">
-        <div class="exit-thing-div"><i class="fas fa-times exit-thing"></i></div>
+        <div class="exit-thing-div">
+          <i class="fas fa-times exit-thing"></i>
+        </div>
         <div class="add-drugs-div">
           <h2><%= drug.formated_name %></h2>
           <p><%= "+#{drug.age} years" %></p>
