--- a/app/views/drugs/_list.html.erb
+++ b/app/views/drugs/_list.html.erb
@@ -9,7 +9,7 @@
         <%end%>
         <div class="card-product-infos">
           <h2><%= drug.formated_name %></h2>
-          <p><%= "+#{drug.age} years" %></p>
+          <p><%= "Safe for +#{drug.age} yrs old" %></p>
         </div>
       </div>
       <div class="fixed-element hidden">
