--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -56,6 +56,7 @@ a .dashboard-card-infos h6 {
   align-items: center;
   position: absolute;
   right: 16px;
+  padding-top: 60px;
 
   img {
     height: 17px;
