--- a/app/views/orders/_user-index.html.erb
+++ b/app/views/orders/_user-index.html.erb
@@ -9,12 +9,16 @@
           <h2>Order #<%= order.id %></h2>
           <p><%= order.pharmacy.name %></p>
           <% if order.status == 'initialized' %>
+            <div class="pending-glow"></div>
             <h6>Click here to finish your order</h6>
           <% elsif order.status == 'pending' %>
+            <div class="complete-order"><i class="fas fa-clock"></i></div>
             <h6>The pharmacist is working on your order</h6>
           <% elsif order.status == 'ready' %>
+            <div class="ready-glow"></div>
             <h6>Click here to make your payment</h6>
           <% elsif order.status == 'complete' %>
+            <div class="complete-order"><i class="fas fa-bicycle"></i></div>
             <h6>Your order will be delivered today</h6>
           <% end %>
         </div>
