changed position of pharma header to sticky

--- a/app/assets/stylesheets/pages/_drugs.scss
+++ b/app/assets/stylesheets/pages/_drugs.scss
@@ -3,6 +3,9 @@
   width: 100vw;
   margin: -10px -20px 5px -20px;
   padding: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 3;
   h2 {
     font-family: 'Poppins', sans-serif;
     font-size: 28px;
