--- a/app/views/drugs/_drugs_list.html.erb
+++ b/app/views/drugs/_drugs_list.html.erb
@@ -1,4 +1,4 @@
-<% drugs.each do |drug| %>
+<% @drugs.each do |drug| %>
     <div class="card-container">
         <div class="card-product">
         <% if drug.pic.attached?%>
