better yellow for pending

--- a/app/assets/stylesheets/pages/_order.scss
+++ b/app/assets/stylesheets/pages/_order.scss
@@ -175,8 +175,8 @@
   border-radius: 50%;
   width: 12px;
   height: 12px;
-  box-shadow: 0 0 4px 4px #F2F705;
-  background-color: #F2F705
+  box-shadow: 0 0 4px 4px #fdf300;
+  background-color: #fdf300
 }
 
 .complete-order {
