--- a/app/views/orders/_user-ready.html.erb
+++ b/app/views/orders/_user-ready.html.erb
@@ -59,7 +59,7 @@
     <% end %>
     <div class="total-price">
       <h3>Total</h3>
-      <h2>$<%= @order.total_price %></h2>
+      <h2>$<%= @order.total_price.round(2) %></h2>
     </div>
   </div>
   <%= link_to complete_status_path(@order) do %>
