--- a/app/views/orders/_user-initialize.html.erb
+++ b/app/views/orders/_user-initialize.html.erb
@@ -48,7 +48,7 @@
     </div>
 
 
-    <div class="cart-items">
+    <div class="cart-items client-cart">
       <% @ordered_drugs.each do |ordered_drug| %>
         <div class="cart-card">
           <% if ordered_drug.drug.pic.attached?%>
