--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,8 +1,6 @@
  .main{
-  padding: 25px 20px;
-  margin: -15px -20px 10px -20px;
-  width: 100vw;
-  background-color: rgba($color: #000000, $alpha: 0.1);
+  padding-bottom: 15px;
+  border-bottom: 1px dashed #0c607e;
 }
 
 .main2{
@@ -28,7 +26,16 @@
 .edit_order {
   display: flex;
   align-items: center;
-  width: 355px;
+  .form-group {
+    margin: 0;
+  }
+
+  .order_prescriptions > label {
+    background: none;
+    border: 1px solid black;
+    color: black;
+
+  }
 }
 
 .order_prescriptions {
